--- a/formatconv/package.json
+++ b/formatconv/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.7.0",
     "@popperjs/core": "^2.11.6",
+    "@zip.js/zip.js": "^2.6.50",
     "amazon-cognito-identity-js": "^5.2.10",
     "aws-sdk": "^2.1228.0",
     "bootstrap": "^5.2.2",
     "i18n": "^0.15.1",
     "qrcode.vue": "^3.3.3",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.1.5",
-    "vuex": "^4.0.2",
-    "vue-i18n": "^9.1.10"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
