--- a/formatconv/package.json
+++ b/formatconv/package.json
@@ -15,6 +15,7 @@
     "amazon-cognito-identity-js": "^5.2.10",
     "aws-sdk": "^2.1228.0",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "i18n": "^0.15.1",
     "qrcode.vue": "^3.3.3",
     "vue-i18n": "^9.1.10",
