feat:env api resouce

--- a/formatconv/.env
+++ b/formatconv/.env
@@ -1,1 +1,3 @@
 VITE_SERVICE_NAME=formatconv
+VITE_API_URL=https://opuc65t70d.execute-api.ap-northeast-2.amazonaws.com/v1
+VITE_WEBSOKET_URL=wss://y14qssly6e.execute-api.ap-northeast-2.amazonaws.com/v1
